--- a/CodePulse.API/appsettings.json
+++ b/CodePulse.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CodePluseConnectionString": "server=.;Database=CodePlusDb;TrustServerCertificate=True;Trusted_Connection=True"
+  },
+  "JWT": {
+    "Key": "ajkfkjadsdsslsfsskljfslknfskfjslfjsddd",
+    "Issuer": "https://localhost:7279",
+    "Audience": "https://localhost:4200"
   }
 }
